etc/kubernetes/manifests/po-webui.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webui-po
  labels:
    app: webui-po
spec:
  containers:
    - name: webui-container
      args:
        - webui.js
      command:
        - node
      image: docker.io/academiaonline/dockercoins:latest-webui
      securityContext:
        runAsGroup: 65534
        runAsUser: 65534
      volumeMounts:
        - name: webui-files
          mountPath: /src/files/
          readOnly: true
        - name: webui-volume
          mountPath: /src/webui.js
          readOnly: true
          subPath: webui.js
      workingDir: /src/
  volumes:
    - name: webui-volume
      configMap:
        defaultMode: 0444
        items:
          - key: webui.js
            mode: 0444
            path: webui.js
        name: webui-cm
    - name: webui-files
      emptyDir:
        medium: Memory
        sizeLimit: 1Mi
