etc/kubernetes/manifests/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis-po
  type: ClusterIP
