etc/kubernetes/manifests/rng-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: rng-po
  type: ClusterIP
