etc/kubernetes/manifests/webui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: webui-po
  type: NodePort
