etc/kubernetes/manifests/hasher-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hasher-netpol
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: worker-po
      ports:
        - port: 8080
  podSelector:
    matchLabels:
      app: hasher-po
  policyTypes:
    - Ingress
