etc/kubernetes/manifests/netpol-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  policyTypes:
    - Ingress
