etc/kubernetes/manifests/netpol-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-netpol
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webui-po
        - podSelector:
            matchLabels:
              app: worker-po
      ports:
        - port: 6379
  podSelector:
    matchLabels:
      app: redis-po
  policyTypes:
    - Ingress
