etc/kubernetes/manifests/rng-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rng-netpol
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: worker-po
      ports:
        - port: 8080
  podSelector:
    matchLabels:
      app: rng-po
  policyTypes:
    - Ingress
