etc/kubernetes/manifests/webui-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webui-netpol
spec:
  ingress:
    - ports:
        - port: 8080
  podSelector:
    matchLabels:
      app: webui-po
  policyTypes:
    - Ingress
